[tool.poetry]
name = "qsnake"
version = "0.1.0"
description = ""
authors = ["David Buckley <buckley.w.david@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
game = {path = "../game"}
key-events = {path = "../key-events"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
